# hybrid_snn

./: .gitignore  CMakeLists.txt  README.md  lif_sim
.github/workflows/: build.yml
scripts/: plot_results.py  preprocess_shd.py
src/: alif_neuron.h  data_pipeline.h  eprop_trace.h  lif_neuron.sv  q8_8_math.h  snn_network.h  tb_lif_neuron.sv  telemetry_logger.h
src/jax_translation/: snn_core.py
tests/: run_shd.cpp  test_alif.cpp  test_benchmarks.cpp  test_encoder.cpp  test_eprop.cpp  test_integration.cpp  test_math.cpp  test_memory_profiling.cpp  test_network.cpp
